--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 offset-md-4">
-                <h2 class="text-center signin-title">Sign In to access your todo-list</h2>
+                <h2 class="text-center signin-title">Sign In to access your todo-list - MODIFIE TEST WORKFLOW</h2>
                 <form onsubmit="return false;">
                     <div class="form-group input-field">
                         <label for="username">Email</label>
